Fix Summary view alignment in Condensed mode

--- a/app/scss/partials/_summary.scss
+++ b/app/scss/partials/_summary.scss
@@ -23,6 +23,7 @@
 
 	&.expert.condensed {
 		width: 66px;
+		padding-top: 0;
 		background-color: #f9f6f6;
 	}
 
